--- a/yumshare-client/src/app/pages/message/message.component.html
+++ b/yumshare-client/src/app/pages/message/message.component.html
@@ -6,7 +6,7 @@
       [searchResults]="searchResults"
       [showSearchResults]="showSearchResults"
       [loading]="loading"
-      [currentUser]="currentUser"
+      [currentUser]="mineProfile"
       (chatSelected)="selectChat($event)"
       (userSelected)="startOrSelectChat($event)"
       (searchQueryChanged)="searchQuery = $event; searchUsers()">
@@ -19,7 +19,7 @@
       <app-chat-window
         [chat]="selectedChat"
         [messages]="messages"
-        [currentUser]="currentUser"
+        [currentUser]="mineProfile"
         [otherUser]="getOtherUser(selectedChat)"
         (back)="selectedChat = null"
         (sendMessage)="handleSendMessage($event)"
