--- a/yumshare-client/src/app/pages/add-recipe/add-recipe.component.html
+++ b/yumshare-client/src/app/pages/add-recipe/add-recipe.component.html
@@ -115,14 +115,14 @@
           </div>
 
           <div class="user-profile">
-            @if (currentUser) {
+            @if (mineProfile) {
               <div class="profile-info">
                 <div class="profile-avatar">
-                  <span class="avatar-text">{{ (currentUser.displayName || 'U')[0] }}</span>
+                  <img [src]="mineProfile.avatar_url" [alt]="mineProfile.username" class="avatar-image">
                 </div>
                 <div class="profile-details">
-                  <h4>{{ currentUser.displayName || 'User' }}</h4>
-                  <p>{{ currentUser.email }}</p>
+                  <h4>{{ mineProfile.username || 'User' }}</h4>
+                  <p>{{ mineProfile.email }}</p>
                 </div>
               </div>
             } @else {
