--- a/yumshare-client/src/app/pages/edit-recipe/edit-recipe.component.scss
+++ b/yumshare-client/src/app/pages/edit-recipe/edit-recipe.component.scss
@@ -412,6 +412,14 @@
   color: white;
   font-weight: 700;
   font-size: 20px;
+  overflow: hidden;
+}
+
+.avatar-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
 }
 
 .profile-avatar.warning {
